--- a/express-api/package.json
+++ b/express-api/package.json
@@ -3,19 +3,27 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@hapi/joi": "17.1.1",
     "@types/cookie-parser": "1.4.2",
     "@types/express": "4.17.6",
+    "@types/hapi__joi": "17.1.2",
     "@types/helmet": "0.0.47",
+    "@types/jsonwebtoken": "8.5.0",
     "@types/mongoose": "5.7.21",
     "@types/morgan": "1.9.0",
     "@types/node": "14.0.6",
+    "@types/passport": "1.0.3",
+    "@types/passport-google-oauth20": "2.0.3",
     "cookie-parser": "1.4.5",
     "cross-env": "7.0.2",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "helmet": "3.22.0",
+    "jsonwebtoken": "8.5.1",
     "mongoose": "5.9.16",
     "morgan": "1.10.0",
+    "passport": "0.4.1",
+    "passport-google-oauth20": "2.0.0",
     "typescript": "3.9.3"
   },
   "devDependencies": {
