--- a/react-app/nginx.conf
+++ b/react-app/nginx.conf
@@ -38,7 +38,7 @@ http {
       try_files $uri $uri/ /index.html;
     }
 
-    location ~ ^/(api) {
+    location ~ ^/(api|auth) {
       proxy_http_version 1.1;
       
       proxy_set_header Connection       "upgrade";
