make new secure keys on each restart

--- a/express-api/Dockerfile
+++ b/express-api/Dockerfile
@@ -8,5 +8,8 @@ RUN npm install --silent
 
 COPY . ./
 
+RUN openssl genrsa -out private.pem 2048
+RUN openssl rsa -in private.pem -pubout > public.pem
+
 EXPOSE 3000
 CMD ["npm", "run", "build"]
