--- a/react-app/package.json
+++ b/react-app/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "4.10.1",
-    "@material-ui/icons": "4.9.1",
     "@testing-library/jest-dom": "5.9.0",
     "@testing-library/react": "10.0.4",
     "@testing-library/user-event": "10.4.0",
@@ -14,6 +13,7 @@
     "@types/react-dom": "16.9.8",
     "@types/react-router-dom": "5.1.5",
     "axios": "0.19.2",
+    "mdi-material-ui": "6.16.0",
     "node-sass": "4.14.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
