rename private keys to jwt_

--- a/express-api/Dockerfile
+++ b/express-api/Dockerfile
@@ -8,8 +8,8 @@ RUN npm install --silent
 
 COPY . ./
 
-RUN openssl genrsa -out private.pem 2048
-RUN openssl rsa -in private.pem -pubout > public.pem
+RUN openssl genrsa -out jwt_private.pem 2048
+RUN openssl rsa -in jwt_private.pem -pubout > jwt_public.pem
 
 EXPOSE 3000
 CMD ["npm", "run", "build"]
