--- a/express-api/Dockerfile
+++ b/express-api/Dockerfile
@@ -1,5 +1,5 @@
 # --- Express Server --- #
-FROM node:12-alpine
+FROM node:12
 
 WORKDIR /express-api
 
@@ -7,6 +7,9 @@ COPY package*.json ./
 RUN npm install --silent
 
 COPY . ./
+
+RUN openssl genrsa -out jwt_private.pem 2048
+RUN openssl rsa -in jwt_private.pem -pubout > jwt_public.pem
 
 EXPOSE 3000
 CMD ["npm", "run", "build"]
