--- a/express-api/.eslintrc.json
+++ b/express-api/.eslintrc.json
@@ -25,6 +25,14 @@
   "rules": {
     "max-len": "off",
     "no-console": "off",
+    "no-underscore-dangle": [
+      "error",
+      {
+        "allow": [
+          "_id"
+        ]
+      }
+    ],
     "object-curly-newline": [
       "error",
       {
