--- a/express-api/.eslintrc.json
+++ b/express-api/.eslintrc.json
@@ -25,6 +25,20 @@
   "rules": {
     "max-len": "off",
     "no-console": "off",
+    "no-underscore-dangle": [
+      "error",
+      {
+        "allow": [
+          "_id"
+        ]
+      }
+    ],
+    "object-curly-newline": [
+      "error",
+      {
+        "multiline": true
+      }
+    ],
     "@typescript-eslint/brace-style": [
       "error",
       "stroustrup"
