--- a/react-app/package.json
+++ b/react-app/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "16.9.8",
     "@types/react-router-dom": "5.1.5",
     "axios": "0.19.2",
+    "bson-objectid": "1.3.1",
     "mdi-material-ui": "6.16.0",
     "node-sass": "4.14.1",
     "react": "16.13.1",
