--- a/react-app/.eslintrc.json
+++ b/react-app/.eslintrc.json
@@ -35,6 +35,7 @@
       "error",
       "stroustrup"
     ],
-    "@typescript-eslint/explicit-function-return-type": "off"
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/lines-between-class-members": "off"
   }
 }
