no-underscore-dangle rule overwritten

--- a/react-app/.eslintrc.json
+++ b/react-app/.eslintrc.json
@@ -30,6 +30,14 @@
   ],
   "rules": {
     "max-len": "off",
+    "no-underscore-dangle": [
+      "error",
+      {
+        "allow": [
+          "_id"
+        ]
+      }
+    ],
     "react/prop-types": "off",
     "@typescript-eslint/brace-style": [
       "error",
