--- a/react-app/package.json
+++ b/react-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "4.10.1",
+    "@material-ui/lab": "4.0.0-alpha.56",
     "@testing-library/jest-dom": "5.9.0",
     "@testing-library/react": "10.2.1",
     "@testing-library/user-event": "11.3.1",
