--- a/react-app/package.json
+++ b/react-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "4.10.2",
+    "@material-ui/lab": "4.0.0-alpha.56",
     "@testing-library/jest-dom": "5.10.0",
     "@testing-library/react": "10.2.1",
     "@testing-library/user-event": "11.4.2",
@@ -13,6 +14,7 @@
     "@types/react-dom": "16.9.8",
     "@types/react-router-dom": "5.1.5",
     "axios": "0.19.2",
+    "bson-objectid": "1.3.1",
     "mdi-material-ui": "6.16.0",
     "node-sass": "4.14.1",
     "react": "16.13.1",
