eslint rules overwrite

--- a/express-api/.eslintrc.json
+++ b/express-api/.eslintrc.json
@@ -43,6 +43,9 @@
       "error",
       "stroustrup"
     ],
-    "@typescript-eslint/explicit-function-return-type": "off"
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-unsafe-assignment": "off",
+    "@typescript-eslint/no-unsafe-member-access": "off"
   }
 }
