--- a/express-api/package.json
+++ b/express-api/package.json
@@ -10,6 +10,7 @@
     "@types/helmet": "0.0.47",
     "@types/jsonwebtoken": "8.5.0",
     "@types/mongoose": "5.7.27",
+    "@types/mongoose-paginate": "5.0.8",
     "@types/morgan": "1.9.1",
     "@types/node": "14.0.13",
     "@types/passport": "1.0.3",
@@ -21,6 +22,7 @@
     "helmet": "3.23.1",
     "jsonwebtoken": "8.5.1",
     "mongoose": "5.9.19",
+    "mongoose-paginate": "5.0.3",
     "morgan": "1.10.0",
     "passport": "0.4.1",
     "passport-google-oauth20": "2.0.0",
