add SvgIcon to allowed prop-spreadable

--- a/react-app/.eslintrc.json
+++ b/react-app/.eslintrc.json
@@ -42,7 +42,8 @@
       "error",
       {
         "exceptions": [
-          "Route"
+          "Route",
+          "SvgIcon"
         ]
       }
     ],
