fix @ts-ignore eslint warning, will allow with a description

--- a/express-api/.eslintrc.json
+++ b/express-api/.eslintrc.json
@@ -43,6 +43,12 @@
       "error",
       "stroustrup"
     ],
+    "@typescript-eslint/ban-ts-comment": [
+      "error",
+      {
+        "ts-ignore": "allow-with-description"
+      }
+    ],
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-unsafe-assignment": "off",
