Twitter timeline embed + eslint rules updated for it

--- a/react-app/.eslintrc.json
+++ b/react-app/.eslintrc.json
@@ -48,9 +48,22 @@
       }
     ],
     "react/prop-types": "off",
+    "yoda": [
+      "error",
+      "never",
+      {
+        "exceptRange": true
+      }
+    ],
     "@typescript-eslint/brace-style": [
       "error",
       "stroustrup"
+    ],
+    "@typescript-eslint/ban-ts-comment": [
+      "error",
+      {
+        "ts-ignore": "allow-with-description"
+      }
     ],
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
