--- a/react-app/package.json
+++ b/react-app/package.json
@@ -20,6 +20,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-konami-code": "2.0.0-beta.1",
+    "react-player": "2.6.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "typescript": "3.9.7"
