--- a/react-app/package.json
+++ b/react-app/package.json
@@ -15,7 +15,7 @@
     "@types/react-router-dom": "5.1.5",
     "axios": "0.19.2",
     "bson-objectid": "1.3.1",
-    "clipboard-copy": "^3.1.0",
+    "copy-to-clipboard": "3.3.1",
     "mdi-material-ui": "6.17.0",
     "node-sass": "4.14.1",
     "react": "16.13.1",
