rule to allow prop spreading

--- a/react-app/.eslintrc.json
+++ b/react-app/.eslintrc.json
@@ -43,6 +43,7 @@
       {
         "exceptions": [
           "Icon",
+          "IconFromLink",
           "Route",
           "SvgIcon"
         ]
