--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,7 @@ updates:
       day: "friday"
       time: "17:00"
       timezone: "America/New_York"
+    target-branch: "develop"
     labels:
       - "Dependencies"
     reviewers:
@@ -19,6 +20,7 @@ updates:
       day: "friday"
       time: "17:00"
       timezone: "America/New_York"
+    target-branch: "develop"
     labels:
       - "Dependencies"
     reviewers:
