--- a/react-app/package.json
+++ b/react-app/package.json
@@ -16,26 +16,25 @@
     "axios": "0.20.0",
     "bson-objectid": "1.3.1",
     "copy-to-clipboard": "3.3.1",
+    "eslint": "6.8",
     "mdi-material-ui": "6.18.0",
-    "node-sass": "4.14.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-konami-code": "2.0.0-beta.1",
     "react-player": "2.6.2",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.3",
-    "typescript": "4.0.3"
+    "react-scripts": "^5.0.1",
+    "sass": "^1.55.0",
+    "typescript": "^4.8.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "3.10.1",
     "@typescript-eslint/parser": "3.10.1",
     "cross-env": "7.0.2",
-    "eslint": "6.8.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-airbnb-typescript": "9.0.0",
     "eslint-plugin-import": "2.22.0",
     "eslint-plugin-jsx-a11y": "6.3.1",
-    "eslint-plugin-react": "7.20.6",
     "eslint-plugin-react-hooks": "4.1.2"
   },
   "scripts": {
